<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">clear</string>
    <string name="div_sign">%</string>
    <string name="plus_sign">+</string>
    <string name="multiplication_sign">*</string>
    <string name="substract_sign">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="equal_sign">=</string>
    <string name="_0">0</string>
    <string name="dot_sign">.</string>
    <string name="error">Error</string>
    <string name="saved_result">saved_result</string>
</resources>